--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -12,8 +12,14 @@ jobs:
     runs-on: ubuntu-latest
     if: github.actor != 'github-classroom[bot]'
     steps:
+    - name: Setup Python
+      uses: actions/setup-python@v5
+      with:
+          python-version: '3.9'
     - name: Install Dependencies
-      run: pip install -r requirements.txt
+      run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
     - name: Checkout code
       uses: actions/checkout@v4
     - name: Test DataFrame
